@@ -1,19 +1,18 @@
 package com.todocine.service.impl;
 
 
+import com.todocine.dao.UsuarioMovieDAO;
 import com.todocine.dao.MovieDAO;
-import com.todocine.dao.VotoDAO;
 import com.todocine.dto.MovieDTO;
-import com.todocine.dto.VotoDTO;
-import com.todocine.entities.Movie;
-import com.todocine.entities.Usuario;
-import com.todocine.entities.Voto;
-import com.todocine.entities.VotoId;
+import com.todocine.dto.MovieDetailDTO;
+import com.todocine.entities.*;
 import com.todocine.exceptions.BadGatewayException;
 import com.todocine.exceptions.NotFoudException;
 import com.todocine.service.MovieService;
 import com.todocine.service.TMDBService;
 import com.todocine.utils.Paginator;
+import com.todocine.utils.mapper.MovieMapper;
+import com.todocine.utils.mapper.UsuarioMovieMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,10 +22,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
-public class MovieServiceImpl implements MovieService {
+public class MovieServiceImpl extends BaseServiceImpl implements MovieService {
 
     Logger logger = LoggerFactory.getLogger(MovieServiceImpl.class);
 
@@ -37,26 +35,39 @@ public class MovieServiceImpl implements MovieService {
     private MovieDAO movieDAO;
 
     @Autowired
-    private VotoDAO votoDAO;
+    private UsuarioMovieDAO usuarioMovieDAO;
 
     @Override
     @Transactional(readOnly = true)
-    public MovieDTO getMovieById(String id) throws NotFoudException, BadGatewayException {
+    public MovieDetailDTO getMovieDetailById(String id) throws NotFoudException, BadGatewayException {
+        Boolean favorito = false;
+        Boolean vista = false;
+        Double voto = null;
+
         try {
             Map<String, Object> movieMap = tmdbService.getMovieById(id);
 
             if (movieMap.get("id") != null) {
-                MovieDTO movieDTO = new MovieDTO(movieMap);
+                MovieDTO movieDTO = MovieMapper.toDTO(movieMap);
                 Movie movie = movieDAO.findById(id).orElse(null);
 
                 if (movie != null) {
-                    MovieDTO movieDTO1 = new MovieDTO(movie);
-                    movieDTO.setVotos(movieDTO1.getVotos());
+                    MovieDTO movieDTO1 = MovieMapper.toDTO(movie);
                     movieDTO.setVotosMediaTC(movieDTO1.getVotosMediaTC());
                     movieDTO.setTotalVotosTC(movieDTO1.getTotalVotosTC());
                 }
 
-                return movieDTO;
+                UserMovieId userMovieId = new UserMovieId(new Usuario(getCurrentUserId()), MovieMapper.toEntity(movieDTO));
+
+                UsuarioMovie usuarioMovie = usuarioMovieDAO.findById(userMovieId).orElse(null);
+
+                if (usuarioMovie != null) {
+                    favorito = usuarioMovie.getFavoritos().equals("S");
+                    vista = usuarioMovie.getVista().equals("S");
+                    voto = usuarioMovie.getVoto();
+                }
+
+                return new MovieDetailDTO(movieDTO, favorito, voto, vista);
 
             } else {
                 throw new NotFoudException("No se ha encontrado la película");
@@ -77,7 +88,9 @@ public class MovieServiceImpl implements MovieService {
             else {
                 Paginator<MovieDTO> moviePage = new Paginator<>(map);
                 List<MovieDTO> results = ((List<Map<String, Object>>) map.get("results")).stream()
-                        .map(item -> new MovieDTO(item)).collect(Collectors.toList());
+                        .map(MovieMapper::toDTO)
+                        .toList();
+
                 moviePage.setResults(results);
 
                 logger.info(moviePage.toString());
@@ -102,7 +115,9 @@ public class MovieServiceImpl implements MovieService {
             else {
                 Paginator<MovieDTO> moviePage = new Paginator<>(map);
                 List<MovieDTO> results = ((List<Map<String, Object>>) map.get("results")).stream()
-                        .map(item -> new MovieDTO(item)).collect(Collectors.toList());
+                        .map(MovieMapper::toDTO)
+                        .toList();
+
                 moviePage.setResults(results);
 
                 logger.info(moviePage.toString());
@@ -114,71 +129,5 @@ public class MovieServiceImpl implements MovieService {
         }
     }
 
-    @Override
-    @Transactional
-    public MovieDTO updateVote(String movieId, Long usuarioId, VotoDTO votoDTO) throws NotFoudException, BadGatewayException {
-        Movie movieEntity = null;
-        MovieDTO movieDTO = null;
-        logger.info(votoDTO.toString());
-        try {
-            Map<String, Object> map = tmdbService.getMovieById(movieId);
-            if (map.get("id") != null) {
-                movieDTO = new MovieDTO(map);
-                movieEntity = movieDAO.findById(movieId).orElse(null);
-
-                if (movieEntity == null)
-                    movieEntity = new Movie(movieDTO);
-                    movieDAO.save(movieEntity);
-
-                if (movieEntity != null) {
-                    Voto voto = votoDAO.findById(new VotoId(new Usuario(usuarioId), new Movie(movieId))).orElse(null);
-                    List<Voto> votosTC = movieEntity.getVotosTC();
-                    if (voto != null && votosTC.contains(voto)) {
-                        votosTC.remove(voto);
-
-                        actualizarMediaVotos(movieEntity, votoDTO.getVoto(), voto.getVoto());
-                        voto.setVoto(votoDTO.getVoto());
-                    } else {
-                        voto = new Voto(votoDTO);
-
-                        calcularMediaVotos(movieEntity, votoDTO.getVoto());
-                    }
-
-                    logger.info(voto.toString());
-                    votoDAO.save(voto);
-                    votosTC.add(voto);
-
-                    movieDAO.save(movieEntity);
-
-                    List<VotoDTO> currentVotes = movieEntity.getVotosTC().stream().map(v -> new VotoDTO(v)).collect(Collectors.toList());
-                    movieDTO.setVotos(currentVotes);
-                    movieDTO.setTotalVotosTC(movieEntity.getTotalVotosTC());
-                    movieDTO.setVotosMediaTC(movieEntity.getVotosMediaTC());
-                }
-
-                return movieDTO;
-            } else {
-                throw new NotFoudException("No se ha encontrado la película");
-            }
-        } catch (IOException ex) {
-            throw new BadGatewayException("La respuesta de TMDB ha fallado");
-        }
-    }
-
-    private void actualizarMediaVotos(Movie movieEntity, Double newVote, Double oldVoto) {
-        Double total = movieEntity.getVotosMediaTC() * movieEntity.getTotalVotosTC();
-        Double totalOld = total - oldVoto;
-
-        movieEntity.setVotosMediaTC((totalOld + newVote) / movieEntity.getTotalVotosTC());
-    }
-
-    private void calcularMediaVotos(Movie movieEntity, Double voto) {
-        Integer totalVotosTC = movieEntity.getTotalVotosTC();
-        Double total = movieEntity.getVotosMediaTC() * totalVotosTC;
-
-        ++totalVotosTC;
-        movieEntity.setTotalVotosTC(totalVotosTC);
-        movieEntity.setVotosMediaTC((total + voto) / totalVotosTC);
-    }
 }
 
